--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -5,6 +5,7 @@
     height: 100vh;
     background-image: url("../../Assets/background.jpg");
     background-size: cover; 
+    z-index: -1;
   
   }
   
@@ -16,7 +17,7 @@
     padding: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 20px;
-   opacity: 0.;
+   /* opacity: 0.; */
   }
   
   .form-input {
